--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-scikit-learn
-joblib
-matplotlib
+streamlit==1.31.0
+pandas==2.1.4
+numpy==1.26.4
+scikit-learn==1.2.2
+joblib==1.3.2
+matplotlib==3.8.2
