--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-streamlit==1.31.0
-pandas==2.1.4
-numpy==1.26.4
-scikit-learn==1.4.0
-joblib==1.2.0
-matplotlib==3.8.2
+streamlit
+pandas
+scikit-learn
+joblib
